<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\' am a button</string>
    <string name="TextButton">Button</string>
    <string name="TextWidget">Here are my widgets</string>
    <string name="TextCheck">Check this out</string>
    <string name="TextSwitch">Switch on/off</string>
    <string name="TextAnswer">Type your answer here</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="Type">Type here</string>
    <string name="Choice1">Choice1</string>
    <string name="Choice2">Choice2</string>
    <string name="Choice3">Choice3</string>
    <string name="Message">Message here</string>
    <string name="ID">ID = </string>

</resources>
