<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
       android:rowCount="4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowSpan="1"
            android:layout_columnSpan="2"
            android:text="@string/TextWidget"
            android:textSize="30dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_rowSpan="1"
            android:layout_columnSpan="1"
            android:text="@string/TextButton" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_columnSpan="1"
            android:src="@drawable/flag" />

        <CheckBox
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/TextCheck" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_columnSpan="1"
            android:text="@string/TextSwitch" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowSpan="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:hint="@string/TextAnswer" />

    </GridLayout>